--- a/frontEnd/public/style.css
+++ b/frontEnd/public/style.css
@@ -20,5 +20,16 @@ html {
 }
 
 .userlistSelect {
-  width: 200px;
+  width: 20vw;
+}
+
+.homeWrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.chatContent {
+  margin-bottom: 32px;
+  max-height: calc(100% - 32px);
+  overflow: auto;
 }
